--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "spryker/event-behavior": "^0.1.2",
     "spryker/kernel": "^3.16.0",
-    "spryker/product": "^5.5.0",
+    "spryker/product": "^5.5.0 || ^6.0.0",
     "spryker/product-label": "^2.4.0",
     "spryker/propel-orm": "^1.5.0",
     "spryker/storage": "^3.4.0",
