--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "spryker/product-label": "^2.4.0",
     "spryker/propel-orm": "^1.5.0",
     "spryker/storage": "^3.4.0",
-    "spryker/synchronization": "^0.2.0"
+    "spryker/synchronization": "^0.2.0 || 1.0.0"
   },
   "require-dev": {
     "spryker/catalog": "*",
