--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "spryker/synchronization": "^0.2.0 || ^1.0.0",
     "spryker/synchronization-behavior": "^1.0.0",
     "spryker/synchronization-extension": "^1.0.0",
-    "spryker/util-encoding": "^2.0.0"
+    "spryker/util-encoding": "^1.0.0 || ^2.0.0"
   },
   "require-dev": {
     "spryker/catalog": "*",
