CC-8430: Product label availabel to the current store
* Adjust `ProductLabelStorageFacade::publishLabelDictionary()` facade method
* Adjust product label client methods with store context in the ProductLabelStorage module
* Implement `ProductLabelFacade::getActiveLabelsByCriteria()` facade method
* Adjust `ProductLabelDataLoaderPlugin` search data loader plugin for product labels with store context

--- a/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
@@ -28,3 +28,4 @@ suites:
                 - \SprykerTest\Zed\Locale\Helper\LocaleDataHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDataHelper
