--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "spryker/product": "^5.5.0 || ^6.0.0",
     "spryker/product-label": "^2.4.0",
     "spryker/propel-orm": "^1.5.0",
+    "spryker/publisher-extension": "^1.0.0",
     "spryker/storage": "^3.4.0",
     "spryker/synchronization": "^0.2.0 || ^1.0.0",
     "spryker/synchronization-behavior": "^1.0.0",
