--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
     "spryker/locale": "*",
     "spryker/product-attribute": "*",
     "spryker/propel": "*",
+    "spryker/queue": "*",
     "spryker/search": "*",
+    "spryker/store": "*",
     "spryker/testify": "*"
   },
   "suggest": {
