CC-8430 Cleanup and tests adjusting

--- a/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
@@ -29,6 +29,8 @@ suites:
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \SprykerTest\Zed\Locale\Helper\LocaleDataHelper
+                - \SprykerTest\Zed\ProductLabelStorage\Helper\ProductLabelStorageHelper
 
     Business:
         path: Business
@@ -46,3 +48,4 @@ suites:
                 - \SprykerTest\Zed\Locale\Helper\LocaleDataHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
+                - \SprykerTest\Zed\ProductLabelStorage\Helper\ProductLabelStorageHelper
