--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Spryker\\": "src/Spryker/"
+      "Spryker\\": "src/Spryker/",
+      "SprykerTest\\Zed\\ProductLabelStorage\\Helper\\": "tests/SprykerTest/Zed/ProductLabelStorage/_support/Helper/"
     }
   },
   "autoload-dev": {
