--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "php": ">=7.2",
     "spryker/event-behavior": "^1.10.0",
     "spryker/kernel": "^3.30.0",
-    "spryker/product": "^5.5.0 || ^6.0.0",
-    "spryker/product-label": "^2.4.0 || ^3.0.0",
+    "spryker/product-label": "^3.0.0",
     "spryker/propel-orm": "^1.5.0",
     "spryker/publisher-extension": "^1.0.0",
     "spryker/storage": "^3.4.0",
@@ -20,11 +19,14 @@
   "require-dev": {
     "spryker/catalog": "*",
     "spryker/code-sniffer": "*",
+    "spryker/event": "*",
     "spryker/locale": "*",
+    "spryker/product": "*",
     "spryker/product-attribute": "*",
     "spryker/propel": "*",
     "spryker/queue": "*",
     "spryker/search": "*",
+    "spryker/store": "*",
     "spryker/testify": "*"
   },
   "suggest": {
