--- a/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: ../../../_data
     support: _support
-    log: ../../../_output
+    output: ../../../_output
 
 coverage:
     enabled: true
@@ -14,7 +14,7 @@ coverage:
 suites:
     Communication:
         path: Communication
-        class_name: ProductLabelStorageCommunicationTester
+        actor: ProductLabelStorageCommunicationTester
         modules:
             enabled:
                 - Asserts
@@ -35,7 +35,7 @@ suites:
 
     Business:
         path: Business
-        class_name: ProductLabelStorageBusinessTester
+        actor: ProductLabelStorageBusinessTester
         modules:
             enabled:
                 - Asserts
