--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "spryker/propel-orm": "^1.5.0",
         "spryker/publisher-extension": "^1.0.0",
         "spryker/storage": "^3.4.0",
-        "spryker/store": "^1.7.0",
+        "spryker/store": "^1.19.0",
         "spryker/synchronization": "^0.2.0 || ^1.0.0",
         "spryker/synchronization-behavior": "^1.0.0",
         "spryker/synchronization-extension": "^1.1.0",
@@ -21,11 +21,13 @@
     "require-dev": {
         "spryker/catalog": "*",
         "spryker/code-sniffer": "*",
+        "spryker/container": "*",
         "spryker/event": "*",
         "spryker/locale": "*",
         "spryker/product": "*",
         "spryker/product-attribute": "*",
         "spryker/propel": "*",
+        "spryker/publisher": "*",
         "spryker/queue": "*",
         "spryker/search": "*",
         "spryker/testify": "*"
