FRW-1817 Fixed false positive test cases with Dynamic Multistore mode enabled. (#10862)
FRW-6382 Adjust StoreDependencyHelper and related tests to cover cases when there is no store provided

--- a/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductLabelStorage/codeception.yml
@@ -33,7 +33,7 @@ suites:
                 - \SprykerTest\Zed\Locale\Helper\LocaleDataHelper
                 - \SprykerTest\Zed\ProductLabelStorage\Helper\ProductLabelStorageHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
                 - \SprykerTest\Client\Testify\Helper\ClientHelper
                 - \SprykerTest\Zed\Publisher\Helper\PublishAndSynchronizeHelper
                 - \SprykerTest\Zed\Event\Helper\EventHelper
@@ -61,7 +61,7 @@ suites:
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
-                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \SprykerTest\Zed\Store\Helper\StoreDependencyHelper
                 - \SprykerTest\Client\Testify\Helper\ClientHelper
                 - \SprykerTest\Zed\Publisher\Helper\PublishAndSynchronizeHelper
                 - \SprykerTest\Zed\Event\Helper\EventHelper
