--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,6 @@
 parameters:
     level: 7
-    checkMissingIterableValueType: false
     ignoreErrors:
         - '#Parameter \#1 \$dictionaryKey of method .+LabelDictionaryInterface::findLabel\(\) expects string, int given#'
+        -
+            identifier: missingType.iterableValue
